--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -123,11 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LongInOut.cpp" />
+    <ClCompile Include="InputOutLong.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LongInOut.h" />
+    <ClInclude Include="InputOutLong.h" />
+    <ClInclude Include="NUM.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
