--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Z.cpp ADD_ZZ_Z.cpp" />
     <ClCompile Include="InputOutLong.cpp" />
     <ClCompile Include="N.cpp" />
     <ClCompile Include="P.cpp" />
