--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -140,6 +140,9 @@
     <ClInclude Include="SIZE.h" />
     <ClInclude Include="Z.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
